tests/custom/issues/439/stderr.expected
Error:
    Parser error in file: 439.essence Error is:
ValidatorError 439.essence:5:11:
  |
5 | such that atom in used
  |           ^^^^
Tried to use a Domain where Value was expected

